# winnow

./: .gitignore  API-COVERAGE-FLASH.md  API-COVERAGE-GML.md  CLAUDE.md  COMPLETED.md  Cargo.toml  README.md  TODO.md  flake.nix
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: deploy-docs.yml  kaitai.yml
.moss/: index.sqlite
.normalize/: config.toml
crates/backends/reincarnate-backend-typescript/: Cargo.toml
crates/backends/reincarnate-backend-typescript/runtime/: flash.ts  flash_class.ts  flash_display.ts  flash_events.ts  flash_iterator.ts  flash_memory.ts  flash_net.ts  flash_object.ts  flash_scope.ts  flash_text.ts  flash_utils.ts  flash_xml.ts
crates/backends/reincarnate-backend-typescript/runtime/flash/: amf.ts  display.ts  runtime.ts  text.ts  utils.ts  xml.ts
crates/backends/reincarnate-backend-typescript/src/: ast_passes.rs  ast_printer.rs  emit.rs  js_ast.rs  lib.rs  lower.rs  runtime.rs  scaffold.rs  types.rs
crates/backends/reincarnate-backend-typescript/src/rewrites/: flash.rs  gamemaker.rs  mod.rs  twine.rs
crates/backends/reincarnate-backend-typescript/src/rewrites/twine/: engine.rs  harlowe.rs  mod.rs  sugarcube.rs
crates/checkers/reincarnate-checker-typescript/src/: lib.rs
crates/formats/datawin/: Cargo.toml  game_maker_data.ksy  gml_bytecode.ksy
crates/formats/datawin/src/: cursor.rs  datawin.rs  error.rs  lib.rs  reader.rs  string_table.rs  version.rs
crates/formats/datawin/src/bytecode/: decode.rs  encode.rs  mod.rs  opcode.rs  types.rs
crates/formats/datawin/src/chunks/: bgnd.rs  code.rs  func.rs  mod.rs  room.rs  seqn.rs  shdr.rs  tpag.rs  txtr.rs  vari.rs
crates/formats/datawin/tests/: fixture_tests.rs  kaitai_validate.py  read_files.rs
crates/formats/datawin/tests/fixtures/: v14_minimal.json  v15_break_signals.json  v15_bytecode_variety.json  v15_minimal.json  v15_more_opcodes.json  v15_scpt.json  v15_shared_blob.json  v15_vari_func.json
crates/frontends/reincarnate-frontend-flash/: Cargo.toml
crates/frontends/reincarnate-frontend-flash/src/: abc.rs  assets.rs  class.rs  lib.rs  multiname.rs  scope.rs  translate.rs
crates/frontends/reincarnate-frontend-gamemaker/: Cargo.toml
crates/frontends/reincarnate-frontend-gamemaker/src/: assets.rs  bool_arith_coerce.rs  classref_resolve.rs  data.rs  default_arg.rs  instance_type_flow.rs  lib.rs  logical_op.rs  naming.rs  object.rs  translate.rs
crates/frontends/reincarnate-frontend-twine/: Cargo.toml
crates/frontends/reincarnate-frontend-twine/src/: extract.rs  lib.rs
crates/frontends/reincarnate-frontend-twine/src/harlowe/: ast.rs  expr.rs  lexer.rs  macros.rs  parser.rs  translate.rs
crates/frontends/reincarnate-frontend-twine/src/sugarcube/: ast.rs  custom_macros.rs  expr.rs  lexer.rs  macros.rs  mod.rs  parser.rs  preprocess.rs  translate.rs
crates/frontends/reincarnate-frontend-twine/tests/: debug_errors.rs  sugarcube_e2e.rs
crates/reincarnate-cli/: Cargo.toml
crates/reincarnate-cli/src/: main.rs  registry.rs
crates/reincarnate-core/: Cargo.toml
crates/reincarnate-core/src/: entity.rs  error.rs  lib.rs
crates/reincarnate-core/src/ir/: ast.rs  ast_passes.rs  block.rs  builder.rs  coroutine.rs  func.rs  inst.rs  linear.rs  lower_ast.rs  mod.rs  module.rs  printer.rs  structurize.rs  ty.rs  value.rs
crates/reincarnate-core/src/pipeline/: backend.rs  checker.rs  config.rs  frontend.rs  linker.rs  mod.rs  transform.rs
crates/reincarnate-core/src/project/: asset.rs  manifest.rs  mod.rs  runtime.rs
crates/reincarnate-core/src/system/: audio.rs  dialog.rs  files.rs  graphics.rs  images.rs  input.rs  layout.rs  mod.rs  network.rs  persistence.rs  renderer.rs  save.rs  save_ui.rs  settings_ui.rs  timing.rs  ui.rs
crates/reincarnate-core/src/transforms/: bool_literal_return.rs  call_site_flow.rs  call_site_widen.rs  cfg_simplify.rs  const_fold.rs  constraint_solve.rs  coroutine_lower.rs  dce.rs  int_to_bool.rs  mem2reg.rs  mod.rs  red_cast_elim.rs  stress_tests.rs  type_infer.rs  util.rs
crates/reincarnate-flash/: Cargo.toml
crates/reincarnate-flash/src/: class.rs  multiname.rs  translate.rs
docs/: architecture.md  index.md  introduction.md  package.json  persistence.md
docs/.vitepress/: config.ts
docs/adr/: 002-typescript-strict-config.md
docs/targets/: flash.md  index.md  inform.md  ink.md  puzzlescript.md  qsp.md  renpy.md
runtime/flash/ts/: audio.ts  index.ts  input.ts  renderer.ts  runtime.json  save.ts  timing.ts  ui.ts
runtime/flash/ts/flash/: accessibility.ts  class.ts  deflate.ts  desktop.ts  display.ts  events.ts  exception.ts  geom.ts  iterator.ts  memory.ts  net.ts  object.ts  runtime.ts  scope.ts  security.ts  text.ts  utils.ts
runtime/flash/ts/flash/platform/: browser.ts  files.ts  graphics.ts  images.ts  index.ts  input.ts  network.ts  persistence.ts  timing.ts
runtime/flash/ts/flash/text/: ime.ts
runtime/flash/ts/shared/platform/: audio.ts  graphics.ts  images.ts  index.ts  input.ts
runtime/gamemaker/ts/: index.ts  runtime.json
runtime/gamemaker/ts/gamemaker/: color.ts  constants.ts  draw.ts  global.ts  input.ts  instance.ts  math.ts  room.ts  runtime.ts  storage.ts  string.ts  webgl.ts
runtime/gamemaker/ts/gamemaker/platform/: audio.ts  browser.ts  graphics.ts  index.ts  input.ts  persistence.ts
runtime/gamemaker/ts/shared/: render-root.ts
runtime/gamemaker/ts/shared/platform/: audio.ts  graphics.ts  images.ts  index.ts  input.ts  persistence.ts  timing.ts
runtime/twine/ts/: runtime.harlowe.json  runtime.json
runtime/twine/ts/harlowe/: audio.ts  context.ts  engine.ts  navigation.ts  output.ts  runtime.ts  state.ts
runtime/twine/ts/platform/: _overlay.ts  browser.ts  dialog.ts  history.ts  index.ts  input.ts  layout.ts  persistence.ts  save-ui.ts  save.ts  settings-ui.ts
runtime/twine/ts/sugarcube/: audio.ts  dom.ts  engine.ts  events.ts  input.ts  jquery-extensions.ts  macro.ts  navigation.ts  output.ts  runtime.ts  settings.ts  state.ts  widget.ts  wikifier.ts
