[workspace]
resolver = "2"
members = [
    "crates/reincarnate-core",
    "crates/reincarnate-cli",
    "crates/frontends/reincarnate-frontend-flash",
    "crates/backends/reincarnate-backend-typescript",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rhi-zone/reincarnate"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Flash/SWF parsing
swf = "0.2"
