[package]
name = "reincarnate-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for the Reincarnate legacy software lifting framework"

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
