[package]
name = "reincarnate-flash"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Flash/AVM2 frontend for the Reincarnate legacy software lifting framework"

[dependencies]
reincarnate-core = { path = "../reincarnate-core" }
swf = { workspace = true }
