[package]
name = "reincarnate-frontend-gamemaker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GameMaker frontend for the Reincarnate legacy software lifting framework"

[dependencies]
reincarnate-core = { path = "../../reincarnate-core" }
datawin = { path = "../../formats/datawin" }
